Ch 4 - URL Mapping with Matrix Variables

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -16,3 +16,6 @@ remove=Remove
 taste.placeholder=Enter a keyword
 add.taste=Add taste
 submit=Submit
+
+upload.io.exception=An error occurred while uploading the file. Please try again.
+upload.file.too.big=Your file is too big.
