--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -16,3 +16,6 @@ remove=Supprimer
 taste.placeholder=Entrez un mot-clé
 add.taste=Ajouter un centre d'intérêt
 submit=Envoyer
+
+upload.io.exception=Une erreur est survenue lors de l'envoi du fichier. Veuillez réessayer.
+upload.file.too.big=Votre fichier est trop gros.
